feat: traduzir interface para português brasileiro
- Traduzir README.md para português brasileiro
- Traduzir textos da interface do App.jsx
- Traduzir navegação do Header.jsx
- Traduzir formulários e textos do Contact.jsx
- Atualizar package.json com nome correto do projeto

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nama-proyek-anda",
+  "name": "portfolio-pedro-mendes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
